# claude-hermes-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THREAT_MODEL.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
deploy/: cloudflared.service  hermes-mcp.service  ngrok.service
src/hermes_mcp/: __main__.py  auth.py  config.py  doctor.py  hermes_client.py  jobs.py  oauth.py  server.py
tests/: test_auth.py  test_config.py  test_doctor.py  test_hermes_client.py  test_jobs.py  test_main.py  test_oauth.py  test_oauth_integration.py  test_server_smoke.py
